# bevy_bistro_scene

./: .gitignore  Cargo.toml  README.md
assets/: BistroExteriorFakeGI.gltf
assets/environment_maps/: san_giuseppe_bridge_4k_diffuse.ktx2
src/: auto_instance.rs  camera_controller.rs  convert.rs  main.rs  mipmap_generator.rs
