[package]
name = "bistro"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13" }
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "ec418aa429142972032f56a43ab963bd3be766d4" }
#bevy = { git = "https://github.com/pcwalton/bevy", branch = "uberbuffers" }

image = "0.24"
anyhow = "1.0"
threadpool = "1.8"
futures-lite = "1.12"
argh = "0.1.12"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 3

[features]
#default = ["bevy_main"]
bevy_main = [] #Note: you need to manually change the bevy dependency
